--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,7 @@
 	float: left;
 	width: 85%;
 }
-
+/*   item*/
 .item:hover .close{
 	display: block;
 }
@@ -36,6 +36,15 @@
 .close{
 	margin-top: -20px;
 	display: none;
+}
+
+.reply{
+	float: right;
+	display: none;
+}
+
+.comment_li:hover .reply{
+	display: block;
 }
 
 .item a:hover{
@@ -131,14 +140,26 @@ ul{
 	color: #ccc;
 }
 
-
-
 .comment .btn_comment{
 	float: right;
 	text-align: right;
 	display: none;
+	margin-left: 15px;
 }
 
+.btn-off{
+	background: #ccc;
+	cursor: default;
+}
+
+.comment .countword{
+	float: right;
+	display: none;
+	line-height: 34px;
+}
+.text-box-on .countword{
+	display: inline;
+}
 .text-box-on .comment_box{
 	width: 100%;
     height: 100px;
